chore: install and config prettier and husky
format existing files

--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,14 @@
   }
 }
 
-html, body, #root {
+html,
+body,
+#root {
   height: 100%;
 }
 
-#root, .App {
+#root,
+.App {
   display: flex;
   flex-direction: column;
 }
